--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -1,5 +1,5 @@
 // Define variables for your color scheme
-$blue: #b1ede8;
+$blue: #e6f2ff;
 $pink: #df928e;
 $light-pink: #c58882;
 $black: #32B796;
