--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,5 +1,5 @@
 .footer {
-  background: #F4F4F4;
+  background: $blue;
   height: 20vh;
   color: rgba(0,0,0,0.3);
   margin-top: 100px;
@@ -22,7 +22,7 @@ ul {
   list-style-type: none;
 }
 .footer-wagon-brand img{
- height: 50px;
+ height: 80px;
 }
 
 .full-width{
