--- a/app/views/pools/index.html.erb
+++ b/app/views/pools/index.html.erb
@@ -12,8 +12,8 @@
         <% end %>
     </div>
   </div>
+</div>
     <!--  Search bar -->
-
     <div class="container">
       <div class= "row">
         <div class="col-sm-7">
