--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -2,57 +2,43 @@
 
 
 <div class="container">
-   <%if @pools_booked == [] %>
-    <p>You don't have any reservation </p>
-    <% end %>
-  <% @bookings.each do |booking| %>
-  <% @pools_booked.each do |pool| %>
-
+  <% @my_reservations.each do |booking| %>
     <div class="product">
-        <div class='product-body'>
-          <p>Your restervations as user</p>
-          <p>Date: </p>
-          <p><%= booking.date %></p>
-          <p>Pool name: </p>
-          <p><%=pool.title%></p>
-          <p>Pool dimensions: </p>
-          <p><%=pool.dimensions%></p>
-          <p>Price: </p>
-          <p><%=pool.price%></p>
-          <p>Address: </p>
-          <p><%=pool.address%></p>
-          <p>The Owner: </p>
-          <p><%=@owner.first_name+ " " + @owner.last_name %></p>
-        </div>
-
+      <div class='product-body'>
+        <p>Your reservations as user</p>
+        <p>Date: </p>
+        <p><%= booking.date %></p>
+        <p>Pool name: </p>
+        <p><%=booking.pool.title%></p>
+        <p>Pool dimensions: </p>
+        <p><%=booking.pool.dimensions%></p>
+        <p>Price: </p>
+        <p><%=booking.pool.price%></p>
+        <p>Address: </p>
+        <p><%=booking.pool.address%></p>
+        <p>The Owner: </p>
+        <p><%=booking.pool.user.first_name+ " " + booking.pool.user.last_name%></p>
+      </div>
     </div>
   <% end %>
-  <% end %>
-  <%if @pools_reserved == [] %>
-    <p>You don't have any pool booked </p>
-    <% end %>
+
   <% @reservations.each do |booking| %>
-  <% @pools_reserved.each do |pool| %>
-
     <div class="product">
-        <div class='product-body'>
-          <p>You reservation as owner </p>
-          <p>Date:</p>
-          <p><%= booking.date %></p>
-          <p>Pool name:</p>
-          <p><%=pool.title%></p>
-          <p>Pool dimensions:</p>
-          <p><%=pool.dimensions%></p>
-          <p>Price:</p>
-          <p><%=pool.price%></p>
-          <p>Address:</p>
-          <p><%=pool.address%></p>
-          <p>Your Guest: </p>
-          <p><%=@user.first_name + " " + @user.last_name %></p>
-        </div>
-
+      <div class='product-body'>
+        <p>You reservation as owner </p>
+        <p>Date:</p>
+        <p><%= booking.date %></p>
+        <p>Pool name:</p>
+        <p><%=booking.pool.title%></p>
+        <p>Pool dimensions:</p>
+        <p><%=booking.pool.dimensions%></p>
+        <p>Price:</p>
+        <p><%=booking.pool.price%></p>
+        <p>Address:</p>
+        <p><%=booking.pool.address%></p>
+        <p>Your Guest: </p>
+        <p><%=booking.user.first_name + " " + booking.user.last_name %></p>
+      </div>
     </div>
   <% end %>
-  <% end %>
-
 </div>
