--- a/app/views/pools/show.html.erb
+++ b/app/views/pools/show.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
-    <div class="col-xs-12">
-      <div id="myCarousel" class="carousel slide" data-ride="carousel">
+    <div class="col-xs-6 col-xs-offset-3">
+      <div id="myCarousel" class="carousel-slide" data-ride="carousel">
         <!-- Indicators -->
         <ol class="carousel-indicators">
           <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
