--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -21,7 +21,7 @@
 
 // J'ai synchronise les deux css de form ( Gui & Anais) ne pas toucher.
 .form-control {
-  font-size: 2.2vh !important;
+  font-size: 1.2vh !important;
   line-height: 18px !important;
   letter-spacing: normal !important;
   cursor: pointer !important;
@@ -36,14 +36,27 @@
   border-color: #999999;
 }
 
+.my-form-box {
+  padding: 24px;
+  border: 3px solid $blue;
+  border-radius: 15px;
+  width: 50vh;
+  height: 70vh;
+}
+
 // .my-input {
 //   color: $light-pink;
 //   border-color: $light-pink;
 //   border-radius: 50px;
+//   font-size: 15px;
 // }
 
-.label {
+.my-label {
   color: $light-pink;
   border-color: $light-pink;
   border-radius: 50px;
+  font-size: 17px;
+}
+.container {
+  margin-top: 30px;
 }
