--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -2,35 +2,37 @@
 
 <div class="row">
   <div class="col-xs-12 col-sm-6 col-sm-offset-3 col-md-4 col-md-offset-4">
+    <div class="my-form-box">
 
-    <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+      <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
       <%= f.error_notification %>
       <div class="form-inputs">
-   <%= f.input :email, required: true, autofocus: true %>
+       <%= f.input :email, required: true, autofocus: true %>
 
-    <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-      <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
-    <% end %>
+       <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+       <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
+       <% end %>
 
-    <%= f.input :password, autocomplete: "off", hint: "leave it blank if you don't want to change it", required: false %>
-    <%= f.input :password_confirmation, required: false %>
-    <%= f.input :current_password, hint: "we need your current password to confirm your changes", required: true %>
-        <%= f.input :first_name, required: true, autofocus: false %>
-        <%= f.input :last_name, required: true, autofocus: false %>
-        <%= f.input :address, required: true, autofocus: false %>
-        <%= f.input :phone_number, required: true, autofocus: false %>
-        <%= f.input :photo %>
-        <%= f.input :photo_cache, as: :hidden %>
-      </div>
-      <div class="form-actions btn-medium">
-         <%= f.button :submit, "Update" %>
-      </div>
-   <% end %>
+       <%= f.input :password, autocomplete: "off", hint: "leave it blank if you don't want to change it", required: false %>
+       <%= f.input :password_confirmation, required: false %>
+       <%= f.input :current_password, hint: "we need your current password to confirm your changes", required: true %>
+       <%= f.input :first_name, required: true, autofocus: false %>
+       <%= f.input :last_name, required: true, autofocus: false %>
+       <%= f.input :address, required: true, autofocus: false %>
+       <%= f.input :phone_number, required: true, autofocus: false %>
+       <%= f.input :photo %>
+       <%= f.input :photo_cache, as: :hidden %>
+     </div>
+     <div class="form-actions btn-medium">
+       <%= f.button :submit, "Update" %>
+     </div>
+     <% end %>
 
-   <h3>Cancel my account</h3>
+     <h3>Cancel my account</h3>
 
-<p>Unhappy? <%= link_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
+     <p>Unhappy? <%= link_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
 
-<%= link_to "Back", :back %>
+     <%= link_to "Back", :back %>
+   </div>
  </div>
 </div>
