--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,6 +1,7 @@
 <h2>Sign up</h2>
 <div class="row">
   <div class="col-xs-12 col-sm-6 col-sm-offset-3 col-md-4 col-md-offset-4">
+    <div class="my-form-box">
 
     <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
       <%= f.error_notification %>
@@ -19,6 +20,7 @@
          <%= f.button :submit, "Sign up" %>
       </div>
    <% end %>
+ </div>
  </div>
 </div>
 
