--- a/app/views/pools/new.html.erb
+++ b/app/views/pools/new.html.erb
@@ -1,11 +1,12 @@
 <h1>Ajoutez votre piscine</h1>
 <div class="container">
     <div class="row">
-      <div class="col-xs-12 col-sm-6 col-sm-offset-3 col-md-4 col-md-offset-4">
-        <%= render 'form', pool: @pool %>
-      </div>
-      <div class="col-xs-12 col-sm-6 col-sm-offset-3 col-md-4 col-md-offset-4">
-        <%= link_to 'Back', pools_path, class: "btn-medium btn" %>
+     <!--  <div class="my-form-box"> -->
+        <div class="col-xs-12 col-sm-6 col-sm-offset-3 col-md-4 col-md-offset-4">
+          <div class="my-form-box">
+          <%= render 'form', pool: @pool %>
+          <%= link_to 'Back', pools_path, class: "btn-medium btn" %>
+        </div>
       </div>
     </div>
   </div>
