--- a/app/views/pages/_navbar.html.erb
+++ b/app/views/pages/_navbar.html.erb
@@ -25,6 +25,7 @@
     <!-- Links when logged in -->
     <%=  link_to "Ajouter votre piscine", new_pool_path, class: "navbar-wagon-item navbar-wagon-link" %>
     <%=  link_to "Liste des piscines", pools_path, class: "navbar-wagon-item navbar-wagon-link" %>
+    <%=  link_to "Mes reservations", bookings_path, class: "navbar-wagon-item navbar-wagon-link" %>
 
     <!-- Avatar with dropdown menu -->
     <div class="navbar-wagon-item">
